# rust-cfs-bridge

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: rust-bridge.yml  scripts-integration.yml
bridge-ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
bridge-ui/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main.tsx  telemetryFiltering.test.ts  telemetryFiltering.ts  telemetryTypes.ts
bridge-ui/src/components/command/: CommandHistoryLog.test.tsx  CommandHistoryLog.tsx  CommandScreen.css  CommandScreen.tsx
bridge-ui/src/components/layout/: AlertBanner.test.tsx  AlertBanner.tsx  AnimatedBackdrop.css  AnimatedBackdrop.tsx  AppShell.css  AppShell.tsx  TopNav.css  TopNav.tsx
bridge-ui/src/components/telemetry/: AlertFeedPanel.css  AlertFeedPanel.test.tsx  AlertFeedPanel.tsx  EsHkPanel.tsx  HealthDashboard.test.tsx  HealthDashboard.tsx  HeapChart.test.tsx  HeapChart.tsx  PacketRateChart.test.tsx  PacketRateChart.tsx  ParseErrorPanel.test.tsx  ParseErrorPanel.tsx  StaleWarning.tsx  TelemetryLogTable.css  TelemetryLogTable.test.tsx  TelemetryLogTable.tsx  TelemetryOverview.css  TelemetryOverview.test.tsx  TelemetryOverview.tsx  TelemetryScreen.css  TelemetryScreen.tsx  ToLabHkPanel.tsx  telemetryChartFormat.ts
bridge-ui/src/components/ui/: Button.css  Button.tsx  Card.css  Card.tsx  Panel.css  Panel.tsx  StatusBadge.css  StatusBadge.tsx
bridge-ui/src/stores/: StoreProvider.tsx  alertStore.test.ts  alertStore.ts  commandStore.test.ts  commandStore.ts  rootStore.ts  telemetryStore.test.ts  telemetryStore.ts  telemetryUiPrefsStore.ts  themeStore.test.ts  themeStore.ts  useStore.ts
docker/: Dockerfile  Dockerfile.bridge-ui  README.md  entrypoint-bridge.sh  entrypoint-cfs.sh  entrypoint.sh  nginx-bridge-ui.conf
docker/patches/: sch_lab-hk-schedule.patch
docs/: ARCHITECTURE.md  AVAILABLE_TELEMETRY.md  MESSAGE_FLOW.md  MISSION_CERTIFICATION_REPORT.md  NEXT_STEPS.md  TELEMETRY.md
rust-bridge/: Cargo.toml  README.md  check.sh  coverage.sh
rust-bridge/src/: brain_upload.rs  lib.rs  main.rs  persistence.rs  server.rs  udp.rs
rust-bridge/src/ai_app/: cfe_tbl_file.rs  golden.rs  mission_dims.rs  mod.rs  table_image.rs
rust-bridge/src/cfdp/: mod.rs  pdu.rs  sender.rs  udp.rs
rust-bridge/src/tlm/: cf_eot.rs  cfe_primary.rs  es_hk.rs  evs_long_event.rs  mod.rs  to_lab_hk.rs  udp_task.rs
rust-bridge/tests/: command_verification.rs  persistence.rs  tlm_ws_integration.rs
scripts/: README.md  autograd_golden.py  ensure-github-forks.sh  gpt_forward_golden.py  mock_es_hk_udp.py  verify_live_telemetry_no_mock.py
scripts/ci/: verify_uplink_dictionary.py
scripts/dev/: ws_tlm_tail.py
scripts/e2e/: e2e_log_watcher.py  full_loop_verify.sh
scripts/golden/: autograd_golden.py  tensor_golden.py
scripts/lab/: verify_live_telemetry_no_mock.py
scripts/maintenance/: ensure-github-forks.sh
