[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["dep:axum", "dep:bytes", "dep:tokio", "dep:tower", "dep:tower-http"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

axum = { version = "0.7", optional = true }
bytes = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "fs"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "bridge-server"
path = "src/bin/bridge_server.rs"
required-features = ["server"]
