[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:bytes",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:chrono",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"], optional = true }

axum = { version = "0.7", optional = true, features = ["ws"] }
bytes = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "fs"] }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "bridge-server"
path = "src/bin/bridge_server.rs"
required-features = ["server"]
